--- a/Housing_Prices.ipynb
+++ b/Housing_Prices.ipynb
@@ -20,7 +20,7 @@
         "id": "9eNNoM7nl7E2"
       },
       "source": [
-        "# House Sales in King County, USA"
+        "<h1 align=\"center\"><font size=\"5\">House Sales in King County, USA</font></h1>\r\n"
       ]
     },
     {
@@ -120,7 +120,7 @@
         "from sklearn.preprocessing import StandardScaler,PolynomialFeatures\n",
         "from sklearn.linear_model import LinearRegression"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
         "print(f\"Shape of the dataframe: {df.shape}\")\n",
         "df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +380,7 @@
         "print(\"The data types of each column:\")\r\n",
         "df.dtypes"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
         "print(\"A statistical summary of the dataframe:\")\r\n",
         "df.describe()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,7 +752,7 @@
         "df.drop(['id','Unnamed: 0'], axis=1, inplace=True)\n",
         "df.describe()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1024,7 +1024,7 @@
         "print(f\"number of NaN values for the column bedrooms : {df['bedrooms'].isnull().sum()}\")\n",
         "print(f\"number of NaN values for the column bathrooms : {df['bathrooms'].isnull().sum()}\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1059,7 +1059,7 @@
         "df.replace({'bedrooms': {np.nan: df['bedrooms'].mean()}, 'bathrooms': {np.nan: df['bathrooms'].mean()}}, inplace= True)    # or df.replace({'bedrooms': np.nan, 'bathrooms': np.nan}, {'bedrooms': df['bedrooms'].mean(), 'bathrooms': df['bathrooms'].mean()})\r\n",
         "df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1259,7 +1259,7 @@
         "print(f\"number of NaN values for the column bedrooms : {df['bedrooms'].isnull().sum()}\")\n",
         "print(f\"number of NaN values for the column bathrooms : {df['bathrooms'].isnull().sum()}\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,7 +1307,7 @@
       "source": [
         "df[\"floors\"].value_counts().to_frame()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1397,7 +1397,7 @@
         "# Determine whether houses with a waterfront view or without a waterfront view have more `price` outliers.\r\n",
         "sns.boxplot(x='waterfront', y= 'price', data =df)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1443,7 +1443,7 @@
         "# Determine if the feature sqft_above is negatively or positively correlated with price.\r\n",
         "sns.regplot(x='sqft_above', y='price', data= df )"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1487,7 +1487,7 @@
       "source": [
         "df.corr()['price'].sort_values()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1569,7 +1569,7 @@
         "\n",
         "print(f\"R^2 of this model = {lm.score(X, Y)}\") "
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1617,7 +1617,7 @@
         "\n",
         "print(f\"R^2 of this model = {lr.score(X1,Y)}\") "
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1654,7 +1654,7 @@
       "source": [
         "features =[\"floors\",\"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\"]     "
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1676,7 +1676,7 @@
         "\n",
         "print(f\"R^2 of this model = {lre.score(X_test, Y)}\") "
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1720,7 +1720,7 @@
       "source": [
         "Input=[('scale',StandardScaler()), ('polynomial', PolynomialFeatures(include_bias=False)), ('model',LinearRegression())]"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1753,7 +1753,7 @@
         "#The pipeline has all the methods that the last estimator in the pipeline has\n",
         "print(f\"R^2 of this model = {pipe.score(df[features], Y)}\")"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1799,7 +1799,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "print(\"done\")"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1843,7 +1843,7 @@
         "print(\"number of test samples:\", x_test.shape[0])\n",
         "print(\"number of training samples:\",x_train.shape[0])"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1890,7 +1890,7 @@
         "\n",
         "print(f\"R^2 of the Ridge regression model = {rr.score(x_test, y_test)}\")"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1933,7 +1933,7 @@
         "\r\n",
         "print(f\"R^2 of the Ridge regression model using the transformed data= {RR.score(x_test_ptrf, y_test)}\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
